# hack-vmtranslator

./: README.md  VMTranslator.py  asm_writer.py  command.py  constants.py  pyproject.toml  vm_parser.py
tests/: parser_test_file.vm  parser_test_file_comments.vm  parser_test_file_whitespace.vm  test_command.py  test_vm_parser.py  test_vm_translator.py
